12500
{quote}I don't think it is acceptable to get a type error when a default parameter is used. It was typechecked before, it must fail at definition of the class/method if the types don't checkout{quote}

There's a special case with default arguments for parametric types, to support the following:
```scala
scala> def f[T](x: T = 1) = x
f: [T](x: T)T

scala> f()
res0: Int = 1

scala> f[String]()
<console>:13: error: type mismatch;
 found   : Int
 required: String
Error occurred in an application involving default arguments.
       f[String]()
        ^
```

See http://www.scala-lang.org/files/archive/spec/2.12/04-basic-declarations-and-definitions.html#default-arguments

For the original example in your report, I think it's a valid bug.
